# SFLphone

./: README_DSP  configure.ac
sflphone-client-gnome/src/config/: AudioCodecList.c  AudioCodecList.h  CodecList.c  CodecList.h  Makefile.am  VideoCodecList.c  VideoCodecList.h  VideoConfAccount.c  VideoConfAccount.h  VideoConfDevice.c  VideoConfDevice.h  accountconfigdialog.c  accountlistconfigdialog.c  accountwindow.c  accountwindow.h  audiocodeclist.c  audiocodeclist.h  audioconf.c  audioconf.h  codeclist.c  codeclist.h  configwindow.c  ip2ipwindows.c  ip2ipwindows.h  preferencesdialog.c  tlsadvanceddialog.c  utils.c  videocodeclist.c  videocodeclist.h  videoconf.c  videoconf.h
sflphone-client-gnome/src/widget/: Makefile.am  PidginMiniDialog.c  PidginScrollBook.c  SFLMainSection.c  SFLMainSection.h  SFLMessageBar.c  SFLMessageBar.h  SFLVideoCairo.c  SFLVideoCairo.h  SFLVideoCairoShm.c  SFLVideoCairoShm.h  SFLVideoDevicePreview.c  SFLVideoDevicePreview.h  SFLVideoSession.c  SFLVideoSession.h  SFLVideoSessionControl.c  SFLVideoSessionControl.h  VideoCairo.c  VideoCairo.h  cheese-flash.c  cheese-flash.h  videocairo.c  videocairo.h  videopane.c  videopane.h
sflphone-client-kde/src/lib/: Account.cpp  Account.h  AccountList.cpp  AccountList.h  CMakeLists.txt  Call.cpp  Call.h  CallModel.h  CallModel.hpp  CallTreeItem.cpp  CallTreeItem.h  Contact.h  ContactItemWidget.h  Item.h  callmanager_interface_singleton.h  configurationmanager_interface_singleton.h  instance_interface_singleton.h  libsflphonekde_export.h  sflphone_const.h
sflphone-common/src/util/: AbstractObservable.h  Buffer.h  BufferBuilder.h  Dimension.h  FileDescriptorPasser.cpp  FileDescriptorPasser.h  InetAddress.h  InetSocketAddress.h  Makefile.am  Observable.h  Observer.h  PipelineElement.h  QueuedBuffer.h  SemaphorePosix.h  SharedMemoryPosix.cpp  SharedMemoryPosix.h
sflphone-common/src/util/gstreamer/: Filter.h  InjectablePipeline.cpp  InjectablePipeline.h  Makefile.am  Pipeline.cpp  Pipeline.h  RetrievablePipeline.cpp  RetrievablePipeline.h  VideoFormatToGstCaps.h
sflphone-common/src/util/ipc/: Makefile.am  SemaphorePosix.cpp  SemaphorePosix.h  SharedMemoryPosix.cpp  SharedMemoryPosix.h
sflphone-common/src/util/memory/: Buffer.h  BufferBuilder.h  Makefile.am  ManagedBuffer.h
sflphone-common/src/util/pattern/: AbstractObservable.h  Makefile.am  Observable.h  Observer.h
sflphone-common/src/util/regex/: Makefile.am
sflphone-common/src/video/: FrameFormat.cpp  FrameFormat.h  GstVideoDevice.cpp  GstVideoDevice.h  GstVideoInputSourceAsynchronous.cpp  GstVideoInputSourceAsynchronous.h  Makefile.am  VideoDevice.cpp  VideoDevice.h  VideoEndpoint.cpp  VideoEndpoint.h  VideoExceptions.h  VideoFormat.cpp  VideoFormat.h  VideoFrame.cpp  VideoFrame.h  VideoInputSource.cpp  VideoInputSource.h  VideoInputSourceAsynchronous.cpp  VideoInputSourceAsynchronous.h  VideoInputSourceGst.cpp  VideoInputSourceGst.h  VideoPlugin.h
sflphone-common/src/video/codec/: AbstractVideoCodec.h  GstCodecH264.cpp  GstCodecH264.h  GstCodecJpeg.cpp  GstCodecJpeg.h  GstCodecTheora.cpp  GstCodecTheora.h  Makefile.am  VideoCodec.h  VideoCodecNull.h
sflphone-common/src/video/decoder/: GstDecoder.cpp  GstDecoderH264.cpp  GstDecoderJpeg.h  GstDecoderTheora.h  H264Decoder.cpp  H264Decoder.h  H264GstDecoder.cpp  H264GstDecoder.h  H264GstDecoderSimple.h  Makefile.am  NullDecoder.h  VideoDecoder.cpp  VideoDecoder.h
sflphone-common/src/video/depayloader/: H264Depayloader.cpp  H264Depayloader.h  Makefile.am  VideoDepayloader.h
sflphone-common/src/video/encoder/: GstEncoder.cpp  GstEncoder.h  GstEncoderH264.cpp  GstEncoderH264.h  GstEncoderJpeg.cpp  GstEncoderJpeg.h  GstEncoderJpeg2000.cpp  GstEncoderJpeg2000.h  GstEncoderRaw.cpp  GstEncoderRaw.h  GstEncoderTheora.cpp  GstEncoderTheora.h  (+5 more)
sflphone-common/test/: GstDecoderTest.cpp  GstDecoderTest.h  GstEncoderTest.cpp  GstEncoderTest.h  H264DecoderTest.cpp  H264DecoderTest.h  H264DepayloaderTest.cpp  H264DepayloaderTest.h  H264EncoderTest.cpp  H264EncoderTest.h  Makefile.am  SemaphorePosixTest.cpp  SemaphorePosixTest.h  SharedMemoryPosixTest.cpp  SharedMemoryPosixTest.h  VideoCaptureTest.cpp  VideoCaptureTest.h  VideoEndpointTest.cpp  VideoEndpointTest.h  audiolayertest.cpp  client-jp2k.sh  client-jpeg.sh  client-theora.sh  client.sh  main.cpp  mainbuffertest.cpp  numbercleanertest.cpp  rtptest.cpp  rtptest.h  sdesnegotiatortest.h  server-jpeg.sh  server-theora.sh  server-v4l2.sh  server.sh  trycatch.c  trycatch.h
sflphone-gtk/src/: .cdtproject  .directory  .project  Makefile.am  MemManager.c  MemManager.h  SFLnotify.c  accountwindow.c  actions.c  actions.h  assistant.c  assistant.h  callconsolewindow.c  callconsolewindow.h  calllist.c  calllist.h  callmanager-glue.h  calltree.c  calltree.h  codeclist.c  configurationmanager-glue.h  configwindow.c  configwindow.h  contactlist.c  contactlist.h  contactmanager-glue.h  contactwindow.c  contactwindow.h  dbus.c  dbus.h  errors.c  glwidget.c  glwidget.h  invitewindow.c  invitewindow.h  mail.c  mail.h  main.c  mainwindow.c  mainwindow.h  (+17 more)
src/video/: Makefile.am  VideoCodecDescriptor.cpp  VideoCodecDescriptor.h  VideoRtp.cpp  VideoRtp.h  VideoRtpRTX.cpp  VideoRtpRTX.h  referenceTMP
src/video/V4L/: Brightness.cpp  Brightness.h  Capture.cpp  Capture.h  CaptureMode.cpp  CaptureMode.h  Colour.cpp  Colour.h  Command.cpp  Command.h  ConfigSet.cpp  ConfigSet.h  Contrast.cpp  Contrast.h  Control.cpp  Control.h  CopyMode.cpp  CopyMode.h  Format.cpp  Format.h  ImageSize.cpp  ImageSize.h  Makefile.am  ReadMode.cpp  ReadMode.h  Resolution.cpp  Resolution.h  VideoDevice.cpp  VideoDevice.h  VideoDeviceManager.cpp  VideoDeviceManager.h  YUV420.cpp  YUV420.h  YUV422.cpp  YUV422.h
src/video/VideoCodec/: H263.cpp  H263.h  H263P.cpp  H263P.h  H264.cpp  H264.h  Makefile.am  SWSInterface.cpp  SWSInterface.h  VideoCodec.cpp  VideoCodec.h  VideoSettings.h
src/voicemail/: Makefile.am  VMViewer.cpp  VMViewer.h  VMViewerd.cpp  VMViewerd.h  Voicemail.cpp  Voicemail.h  VoicemailFolder.cpp  VoicemailFolder.h  VoicemailSound.cpp  VoicemailSound.h  base64.cpp  base64.h  main.cpp
(+457 files in other folders)
