include ../../globals.mak

noinst_LTLIBRARIES = libconfig.la

libconfig_la_SOURCES = \
  addressbook-config.c \
  shortcuts-config.c \
  assistant.c \
  preferencesdialog.c \
  accountlistconfigdialog.c \
  zrtpadvanceddialog.c \
  tlsadvanceddialog.c \
  accountconfigdialog.c \
  hooks-config.c \
  audioconf.c \
  CodecList.c \
  VideoCodecList.c \
  AudioCodecList.c \
  videoconf.c \
  VideoConfAccount.c \
  VideoConfDevice.c \
  utils.c 

libconfig_la_LDFLAGS = @DEPS_LDFLAGS@
					  
libconfig_la_CFLAGS = @DEPS_CFLAGS@ 
