SUBDIRS =

noinst_LTLIBRARIES = libV4L.la

libV4L_la_SOURCES =	Brightness.cpp \
		 	Capture.cpp \
			CaptureMode.cpp \
			Colour.cpp \
			Command.cpp \
			Contrast.cpp \
			CopyMode.cpp \
			ReadMode.cpp \
			Resolution.cpp \
			VideoDevice.cpp \
			VideoDeviceManager.cpp \
			ConfigSet.cpp \
			Format.cpp \
			ImageSize.cpp \
			YUV420.cpp \
			YUV422.cpp \
			Control.cpp


AM_CXXFLAGS = -I$(top_srcdir)/include $(libccext2_CFLAGS) $(USER_INCLUDES)
