include $(top_srcdir)/globals.mak

noinst_LTLIBRARIES = libvideodepayloader.la
libvideodepayloader_la_LDFLAGS = $(CCRTP_LIBS)
libvideodepayloader_la_CFLAGS = $(CCRTP_LIBS)	

noinst_HEADERS = \
		VideoDepayloader.h \
	 	H264Depayloader.h
	 					
libvideodepayloader_la_SOURCES = \
		VideoDepayloader.h \
		H264Depayloader.cpp
		
	