include $(top_srcdir)/globals.mak

noinst_LTLIBRARIES = libvideomimeparameters.la

libvideomimeparameters_la_SOURCES = \
		MimeParameters.h \
		MimeParametersH264.h \
		MimeParametersJpeg.h \
		MimeParametersTheora.h \
		MimeParametersNull.h
						
noinst_HEADERS = \
		MimeParameters.h \
		MimeParametersH264.h \
		MimeParametersJpeg.h \
		MimeParametersTheora.h \
		MimeParametersNull.h
		
			